# OfflineMessenger2022

./: CMakeLists.txt  client  client.c  mesaje.c  mess.db  server  server.c  table.c  test.db  users.c  users.db
